# Fake_News_Predictions

./: .gitignore  CONNECTIVITY-RESULT.json  FINAL-REPORT.json  README.md
CHUNK-01/: README.md  RESULT.json
CHUNK-10/: README.md  RESULT.json  verify-chunk-10.sh
CHUNK-CONNECTIVITY/: README.md  verify-connection.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/CHUNK-03/: README.md  RESULT.json  verify-chunk-03.sh
backend/CHUNK-05/: README.md  verify-chunk-05.sh
backend/CHUNK-06/: README.md  RESULT.json
backend/CHUNK-07/: README.md  RESULT.json  verify-chunk-07.sh
backend/CHUNK-08/: README.md
backend/CHUNK-09/: README.md  RESULT.json  verify-chunk-09.sh
backend/app/: config.py  main.py
backend/app/routes/: __init__.py  check_news.py
backend/app/services/: __init__.py  classifier_service.py  factcheck_service.py  mock_service.py  news_service.py
backend/app/tests/: test_cache.py  test_check_news_cache.py  test_classifier_cache.py  test_factcheck_cache.py  test_news_cache.py
backend/app/utils/: cache.py
backend/fake_news_prediction_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_check_news.py  test_classifier_service.py  test_factcheck_service.py  test_health.py  test_news_service.py
deploy/: gcloud_deploy.sh
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
scripts/: run-tests.sh  verify-chunk-01.sh  verify-chunk-02.sh  verify-chunk-03.sh  verify-chunk-04.sh  verify-chunk-05.sh  verify-chunk-06.sh  (+5 more)
(+46 files in other folders)
